--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,11 @@
 body{
-    color: whitesmoke;
-    background-color: #222;
+    color: rgb(0, 164, 0);
+    /* background-color: #222; */
+    background-image: url(https://i.pinimg.com/originals/c5/9a/d2/c59ad2bd4ad2fbacd04017debc679ddb.gif);
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+    backdrop-filter: grayscale(1) ;
     font-family: 'Figtree';
     font-style: normal;
     font-weight: 400;
